--- a/example.html
+++ b/example.html
@@ -39,8 +39,9 @@
 	
 	meter.on('sample', function (dB, percent, level) {
 		levelEl.style.height = (percent * 100) + '%';
-		console.log(percent)
-		console.log(dB)
+		if (percent > .5){
+                  alert('Blah')
+                }
 	});
 	
 	// change element class when meter starts listening
